# LinearSolvers

./: IRLS.py  README.md
IRLS/: IRLS.py
Jacobi/include/: CMakeLists.txt  jacobi.hpp
Jacobi/lib/: libjacobi.dylib
